tests/baselines/reference/parserInvalidIdentifiersInVariableStatements1.errors.txt
==== tests/cases/conformance/parser/ecmascript5/ErrorRecovery/VariableLists/parserInvalidIdentifiersInVariableStatements1.ts (2 errors) ====
    var export;
        ~~~~~~
!!! error TS1134: Variable declaration expected.
    var foo;
    var class;
        ~~~~~
!!! error TS1134: Variable declaration expected.
    var bar;
    